@@ -198,9 +198,7 @@ setSelectMask(InputHandler *handlers, fd_set *readMask)
 }
 #endif
 
-static unsigned int timeout = 60;
-
-static int R_SocketWait(int sockfd, int write)
+static int R_SocketWait(int sockfd, int write, int timeout)
 {
     fd_set rfd, wfd;
     struct timeval tv;
@@ -291,7 +289,7 @@ int R_SocketWaitMultiple(int nsock, int *insockfd, int *ready, int *write,
 	    tv.tv_sec = mytimeout - used;
 	    tv.tv_usec = 1e6 * (mytimeout - used - tv.tv_sec);
 	} else {  /* always poll occationally--not really necessary */
-	    tv.tv_sec = timeout;
+	    tv.tv_sec = 60;
 	    tv.tv_usec = 0;
 	}
 #elif defined(Win32)
@@ -367,12 +365,7 @@ int in_Rsockselect(int nsock, int *insockfd, int *ready, int *write,
     return R_SocketWaitMultiple(nsock, insockfd, ready, write, timeout);
 }
 
-void R_SockTimeout(int delay)
-{
-    timeout = (unsigned int) delay;
-}
-
-int R_SockConnect(int port, char *host)
+int R_SockConnect(int port, char *host, int timeout)
 {
     SOCKET s;
     fd_set wfd, rfd;
@@ -503,11 +496,11 @@ int R_SockClose(int sockp)
     return closesocket(sockp);
 }
 
-int R_SockRead(int sockp, void *buf, int len, int blocking)
+int R_SockRead(int sockp, void *buf, int len, int blocking, int timeout)
 {
     int res;
 
-    if(blocking && R_SocketWait(sockp, 0) != 0) return 0;
+    if(blocking && R_SocketWait(sockp, 0, timeout) != 0) return 0;
     res = (int) recv(sockp, buf, len, 0);
     return (res >= 0) ? res : -socket_errno();
 }
@@ -518,17 +511,17 @@ int R_SockOpen(int port)
     return Sock_open(port, NULL);
 }
 
-int R_SockListen(int sockp, char *buf, int len)
+int R_SockListen(int sockp, char *buf, int len, int timeout)
 {
     check_init();
     /* inserting a wait here will eliminate most blocking, but there
        are scenarios under which the Sock_listen call might block
        after the wait has completed. LT */
-    R_SocketWait(sockp, 0);
+    R_SocketWait(sockp, 0, timeout);
     return Sock_listen(sockp, buf, len, NULL);
 }
 
-int R_SockWrite(int sockp, const void *buf, int len)
+int R_SockWrite(int sockp, const void *buf, int len, int timeout)
 {
     int res, out = 0;
 
@@ -539,7 +532,7 @@ int R_SockWrite(int sockp, const void *buf, int len)
        interface since there is no way to tell how much, if anything,
        has been written.  LT */
     do {
-	if(/*blocking && */R_SocketWait(sockp, 1) != 0) return out;
+	if(R_SocketWait(sockp, 1, timeout) != 0) return out;
 	res = (int) send(sockp, buf, len, 0);
 	if (res < 0 && socket_errno() != EWOULDBLOCK)
 	    return -socket_errno();
