@@ -51,13 +51,12 @@ int in_Rsockselect(int nsock, int *insockfd, int *ready, int *write,
 		   double timeout);
 
 /* from Rsock.c, for sockconn.c */
-void R_SockTimeout(int delay);
 int R_SockOpen(int port);
-int R_SockListen(int sockp, char *buf, int len);
-int R_SockConnect(int port, char *host);
+int R_SockListen(int sockp, char *buf, int len, int timeout);
+int R_SockConnect(int port, char *host, int timeout);
 int R_SockClose(int sockp);
-int R_SockRead(int sockp, void *buf, int maxlen, int blocking);
-int R_SockWrite(int sockp, const void *buf, int len);
+int R_SockRead(int sockp, void *buf, int maxlen, int blocking, int timeout);
+int R_SockWrite(int sockp, const void *buf, int len, int timeout);
 
 /* from Rhttpd.c */
 int in_R_HTTPDCreate(const char *ip, int port);
